<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.khaana.mad.SignupActivity">



    <EditText
        android:id="@+id/fname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:backgroundTint="#4b5320"
        android:ems="10"
        android:hint="@string/FirstName"
        android:maxLines="1"
        android:inputType="" />

    <EditText
        android:id="@+id/sname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fname"
        android:layout_alignStart="@+id/pass"
        android:layout_marginTop="10dp"
        android:backgroundTint="#4b5320"
        android:ems="10"
        android:hint="@string/SecondName"
        android:maxLines="1"
        android:inputType="" />


    <EditText
        android:id="@+id/user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sname"
        android:layout_alignStart="@+id/fname"
        android:layout_marginTop="10dp"
        android:backgroundTint="#4b5320"
        android:ems="10"
        android:hint="@string/User"
        android:maxLines="1"
        android:inputType="" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user"
        android:layout_alignStart="@+id/fname"
        android:layout_marginTop="10dp"
        android:backgroundTint="#4b5320"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:maxLines="1" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_alignStart="@+id/email"
        android:layout_marginTop="10dp"
        android:backgroundTint="#4b5320"
        android:ems="10"
        android:hint="@string/Pass"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pass"
        android:layout_alignEnd="@+id/email"
        android:layout_marginTop="10dp"
        android:text="@string/NEXT" />


</RelativeLayout>