<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.khaana.mad.MainActivity">


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:text="@string/LOGIN" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_marginStart="5dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        android:layout_toEndOf="@+id/button"
        android:text="@string/SIGNIN" />

    <TextView
        android:id="@+id/Member"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_below="@+id/button"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="-2dp"
        android:layout_toStartOf="@+id/button2"
        android:textSize="15sp"
        android:text="@string/Member" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/logo" />


</RelativeLayout>